# animation

./: CMakeLists.txt  README.md  fonts.readme
doc/: Makefile  make.bat
doc/source/: .conf.py.in.swp  conf.py  conf.py.in  index.rst  language.rst  variables.rst
doc/source/language/: blocks.rst  colors.rst  commands.rst  conditions.rst  fonts.rst  images.rst  macros.rst  pens.rst  types.rst  variables.rst
examples/basics/: ex1-basics_random.amx
examples/drawing/: ex1-drawing_circle.amx  ex1-drawing_line.amx  ex1-drawing_polygon.amx  ex1-drawing_rectangle.amx
examples/macro/: ex1-macro_fade_inout.amx
examples/titles/: ex1-title_slides.amx
src/: abort.c  abort.h  amath.c  amath.h  blocks.c  blocks.h  config.h  config.h.in  config.in  configfile.c  controls.c  controls.h  emoji.c  emoji.h  execute.c  execute.h  ffmpeg.c  filldef.c  filldef.h  font.c  font.h  geometry.c  geometry.h  gmagick_ext.c  gmagick_ext.h  helpers.c  helpers.h  image.c  image.h  imagedef.c  imagedef.h  macro.c  macro.h  magick.c  magick.h  magick_pixel.c  magick_pixel.h  main.c  mprintf.c  mprintf.h  (+25 more)
test/: demo  test_text  test_text.c  test_text2.c
